--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -107,6 +107,10 @@ margin-bottom:20px;
     margin-top:20px;
 }
 
+.modal {
+    background-color: black;
+}
+
 @media screen and (max-width: 1350px) {
     .nav-link{
         margin-right:10px;
