--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -108,7 +108,8 @@ margin-bottom:20px;
 }
 
 .modal {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.5);
+
 }
 
 @media screen and (max-width: 1350px) {
