--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -143,6 +143,8 @@ margin-bottom:20px;
     color:white!important;
 background-color: transparent;
     }
-    
 
-  }
+.buttonradio {
+    visibility: hidden;
+    display: none;
+}
