--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -171,3 +171,11 @@ background-color: transparent;
     
 
   }
+
+  @media screen and (max-width: 575px) {
+    .img-logo {
+        max-width: 75px;
+        width: 40px;
+    }
+
+  }
