--- a/asset/css/jeu.css
+++ b/asset/css/jeu.css
@@ -38,14 +38,49 @@ background-color: transparent!important;
   }
 
 
-@media screen and (max-width: 768px) {
+.btn-help, .btn-skip{
+  font-size: 30px;
+  margin-top:-34px;
+  width:75px;
+  height:75px;
+  background-color: #343239;
+  border-color:black;
+  color:white;
+}
+
+.btn-container{
+  margin-top:50px;
+}
+
+
+.modal-content{
+  color:black;
+}
+
+  @media screen and (min-width: 768px) {
+    .hidden-other{
+      display:none;
+    }
+  }
+@media screen and (max-width: 767px) {
+  .hidden-mobile{
+    display:none;
+  }
   .timer-size{
     font-size:55px;
     font-weight: bold;
   }
-.informations{
+.input-util{
   width:100%;
   
+}
+
+.btn-help{
+  float:left;
+}
+
+.btn-skip{
+  float:right;
 }
 
 .pts, .wds{
