--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -14,6 +14,10 @@ font-weight: bold!important;
     font-weight: bold;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 
 .navbar-dark .navbar-nav .nav-link {
     color:#52474A;
