--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -153,3 +153,12 @@ background-color: transparent;
     font-weight: bolder;
     border-color: #FF0000;
   }   */
+
+.cgButtonGame{
+    border: none;
+    background: transparent;
+}
+button{
+    border: none;
+    background: transparent;
+}
