--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -152,7 +152,7 @@ background-color: transparent;
     visibility:visible; /*Fonctionne avec Firefox */
     font-weight: bolder;
     border-color: #FF0000;
-  }   */
+  } 
 
 .cgButtonGame{
     border: none;
