--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -58,7 +58,7 @@ main {
 }
 
 .footer {
-    background-color: #98989E;
+    background-color: #343239;
     height: 100px;
     margin-left: -15px;
     margin-right: -15px;
