--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -141,6 +141,10 @@ margin-bottom:20px;
     background-color: rgba(0, 0, 0, 0.5);
 }
 
+.img-actus{
+    
+}
+
 @media screen and (max-width: 1350px) {
     .nav-link{
         margin-right:10px;
